--- a/vue_basic/13_collectFormData/1_colectFormData.html
+++ b/vue_basic/13_collectFormData/1_colectFormData.html
@@ -44,10 +44,9 @@
         el: '#root',
         data() {
             return {
-
                 account: '',
                 password: '',
-
+                sex: '',
             }
         }
     })
