--- a/vue_basic/13_collectFormData/1_colectFormData.html
+++ b/vue_basic/13_collectFormData/1_colectFormData.html
@@ -14,15 +14,16 @@
         <form>
             account: <input type="text" v-model="account"><br /><br />
             password:<input type="password" v-model="password"><br /><br />
-            male: <input type="radio" name="sex">
-            female:<input type="radio" name="sex"><br /><br />
+            male: <input type="radio" name="sex" value="male" v-model="sex">
+            female:<input type="radio" name="sex" value="female" v-model="sex">
+            no comment: <input type="radio" name="sex" value="" v-model="sex"><br /><br />
             hobby:
-            learn<input type="checkbox" name="">
-            read<input type="checkbox" name="">
-            write<input type="checkbox" name="">
+            learn<input type="checkbox" name="" v-model="hobby" value="learn">
+            read<input type="checkbox" name="" v-model="hobby" value="read">
+            write<input type="checkbox" name="" v-model="hobby" value="write">
             <br /><br />
             location:
-            <select>
+            <select v-model="city">
                 <option value="">select address</option>
                 <option value="shang hai">shang hai</option>
                 <option value="hang zhou">hang zhou</option>
@@ -30,7 +31,7 @@
             </select>
             <br /><br />
             description:<br />
-            <textarea></textarea>
+            <textarea v-model="desc"></textarea>
             <br /><br />
             <input type="checkbox">accept
             <br /><br />
@@ -47,6 +48,9 @@
                 account: '',
                 password: '',
                 sex: '',
+                hobby: [],
+                city: '',
+                desc: '',
             }
         }
     })
