--- a/vue_basic/13_collectFormData/1_colectFormData.html
+++ b/vue_basic/13_collectFormData/1_colectFormData.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="root">
-        <form>
+        <form @submit="demo">
             account: <input type="text" v-model="account"><br /><br />
             password:<input type="password" v-model="password"><br /><br />
             male: <input type="radio" name="sex" value="male" v-model="sex">
