--- a/vue_basic/13_collectFormData/1_colectFormData.html
+++ b/vue_basic/13_collectFormData/1_colectFormData.html
@@ -29,6 +29,7 @@
                 <option value="shang hai">shang hai</option>
                 <option value="hang zhou">hang zhou</option>
                 <option value="bei jing">bei jing</option>
+                <option value="guang zhou">guang zhou</option>
             </select>
             <br /><br />
             description:<br />
