--- a/vue_basic/13_collectFormData/1_colectFormData.html
+++ b/vue_basic/13_collectFormData/1_colectFormData.html
@@ -35,6 +35,7 @@
             description:<br />
             <textarea v-model.lazy="user_info.desc"></textarea>
             <br /><br />
+            <a href="http://frankly.ren/home/main.html">read and accept the protocal</a>
             <input type="checkbox" v-model="user_info.agreement">accept
             <br /><br />
             <button>submit</button>
