--- a/vue_basic/14_filter/filter.html
+++ b/vue_basic/14_filter/filter.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="../js/vue.js"></script>
+    <script src="../js/dayjs.min.js"></script>
 </head>
 
 <body>
@@ -24,6 +25,11 @@
         methods: {
 
         },
+        computed: {
+            fmtTime() {
+                return dayjs();
+            }
+        }
     })
 </script>
 
