--- a/vue_basic/14_filter/filter.html
+++ b/vue_basic/14_filter/filter.html
@@ -13,6 +13,7 @@
 <body>
     <div id="root">
         <h3>{{fmtTime}} </h3>
+        <h3>{{time | timeFormater}} </h3>
     </div>
 </body>
 <script>
@@ -31,6 +32,11 @@
             fmtTime() {
                 return dayjs(this.time)
                     .format('YYYY-MM-DD HH:mm:ss');
+            }
+        },
+        filters: {
+            timeFormater(val) {
+                console.log('@')
             }
         }
     })
