--- a/vue_basic/14_filter/filter.html
+++ b/vue_basic/14_filter/filter.html
@@ -13,7 +13,8 @@
 <body>
     <div id="root">
         <h3>{{fmtTime}} </h3>
-        <h3>{{time | timeFormater}} </h3>
+        <h3>{{time | timeFormater()}} </h3>
+        <h3>{{time | timeFormater('YYYY_MM_DD')}} </h3>
     </div>
 </body>
 <script>
@@ -35,9 +36,9 @@
             }
         },
         filters: {
-            timeFormater(val) {
+            timeFormater(val, fmt = 'YYYY-MM-DD HH:mm:ss') {
                 // console.log('@')
-                return dayjs(val).format('YYYY-MM-DD HH:mm:ss');
+                return dayjs(val).format(fmt);
             }
         }
     })
