--- a/vue_basic/15_innerOrder/2.v-html.html
+++ b/vue_basic/15_innerOrder/2.v-html.html
@@ -26,7 +26,10 @@
                 name: 'frank',
                 str: '<h3>h3</h3>'
             }
-        }
+        },
+        methods: {
+
+        },
     })
 </script>
 
