--- a/vue_basic/16_customizedInstruction/customized_instruction.html
+++ b/vue_basic/16_customizedInstruction/customized_instruction.html
@@ -33,8 +33,10 @@
             }
         },
         directives: {
-            big: {
-
+            big(a, b, c) {
+                console.log(a)
+                console.log(b)
+                console.log(c)
             }
         }
     })
