--- a/vue_basic/16_customizedInstruction/customized_instruction.html
+++ b/vue_basic/16_customizedInstruction/customized_instruction.html
@@ -33,7 +33,7 @@
             }
         },
         directives: {
-            big(a, b, c) {
+            big(element, b, c) {
                 console.log(a)
                 console.log(b)
                 console.log(c)
