--- a/vue_basic/16_customizedInstruction/customized_instruction.html
+++ b/vue_basic/16_customizedInstruction/customized_instruction.html
@@ -34,7 +34,7 @@
         },
         directives: {
             big(element, b, c) {
-                console.log(a)
+                console.log(element)
                 console.log(b)
                 console.log(c)
             }
