--- a/vue_basic/16_customizedInstruction/customized_instruction.html
+++ b/vue_basic/16_customizedInstruction/customized_instruction.html
@@ -36,7 +36,7 @@
             big(element, binding, c) {
                 element.innerText = binding.value
                 console.log(element)
-                console.log(binding.value)
+                console.log(binding)
             }
         }
     })
