--- a/vue_basic/16_customizedInstruction/customized_instruction.html
+++ b/vue_basic/16_customizedInstruction/customized_instruction.html
@@ -14,6 +14,8 @@
         <button @click="change">n++</button>
         <div><span v-text="n"></span></div>
         <div><span v-big="n"></span></div>
+        <hr />
+        <input type="text">
     </div>
 </body>
 <script>
