--- a/vue_basic/16_customizedInstruction/customized_instruction.html
+++ b/vue_basic/16_customizedInstruction/customized_instruction.html
@@ -36,9 +36,9 @@
         },
         directives: {
             big(element, binding, c) {
-                element.innerText = binding.value
-                console.log(element)
-                console.log(binding)
+                // element.innerText = binding.value
+                // console.log(element)
+                // console.log(binding)
             }
         }
     })
