--- a/vue_basic/16_customizedInstruction/customized_instruction.html
+++ b/vue_basic/16_customizedInstruction/customized_instruction.html
@@ -39,6 +39,9 @@
                 // element.innerText = binding.value
                 // console.log(element)
                 // console.log(binding)
+            },
+            fbind(element, binding) {
+
             }
         }
     })
