--- a/vue_basic/16_customizedInstruction/customized_instruction.html
+++ b/vue_basic/16_customizedInstruction/customized_instruction.html
@@ -40,11 +40,14 @@
                 // console.log(element)
                 // console.log(binding)
             },
-            fbind(element, binding) {
-                console.log(element);
-                element.value = binding.value;
-                element.focus();
+            fbind: {
+
             }
+            // fbind(element, binding) {
+            //     console.log(element);
+            //     element.value = binding.value;
+            //     element.focus();
+            // }
         }
     })
 </script>
