--- a/vue_basic/16_customizedInstruction/customized_instruction.html
+++ b/vue_basic/16_customizedInstruction/customized_instruction.html
@@ -41,7 +41,15 @@
                 // console.log(binding)
             },
             fbind: {
+                bind() {
 
+                },
+                inserted() {
+
+                },
+                update() {
+
+                }
             }
             // fbind(element, binding) {
             //     console.log(element);
