--- a/vue_basic/16_customizedInstruction/customized_instruction.html
+++ b/vue_basic/16_customizedInstruction/customized_instruction.html
@@ -41,12 +41,15 @@
                 // console.log(binding)
             },
             fbind: {
+                //绑定时
                 bind() {
 
                 },
+                //元素被插入页面时
                 inserted() {
 
                 },
+                //模板重新解析时
                 update() {
 
                 }
