--- a/vue_basic/16_customizedInstruction/customized_instruction.html
+++ b/vue_basic/16_customizedInstruction/customized_instruction.html
@@ -42,15 +42,15 @@
             },
             fbind: {
                 //绑定时
-                bind() {
+                bind(element, binding) {
 
                 },
                 //元素被插入页面时
-                inserted() {
+                inserted(element, binding) {
 
                 },
                 //模板重新解析时
-                update() {
+                update(element, binding) {
 
                 }
             }
