--- a/vue_basic/16_customizedInstruction/customized_instruction.html
+++ b/vue_basic/16_customizedInstruction/customized_instruction.html
@@ -43,15 +43,16 @@
             fbind: {
                 //绑定时
                 bind(element, binding) {
-
+                    element.value = binding.value;
                 },
                 //元素被插入页面时
                 inserted(element, binding) {
-
+                    element.focus();
                 },
                 //模板重新解析时
                 update(element, binding) {
-
+                    element.value = binding.value;
+                    element.focus();
                 }
             }
             // fbind(element, binding) {
