--- a/vue_basic/16_customizedInstruction/2.review.html
+++ b/vue_basic/16_customizedInstruction/2.review.html
@@ -15,7 +15,7 @@
         <div><span v-text="n"></span></div>
         <div><span v-big="n"></span></div>
         <hr />
-        <input type="text" id="f" v-fbind="n">
+        <input type="text" id="f" v-fbind-number="n">
     </div>
 </body>
 <script>
@@ -40,7 +40,7 @@
                 // console.log(element)
                 // console.log(binding)
             },
-            fbind: {
+            'fbind-number': {
                 //绑定时
                 bind(element, binding) {
                     element.value = binding.value;
