--- a/vue_basic/16_customizedInstruction/2.review.html
+++ b/vue_basic/16_customizedInstruction/2.review.html
@@ -20,6 +20,21 @@
 </body>
 <script>
     Vue.config.productionTip = false;
+    Vue.directive('fbind-number', {
+        //绑定时
+        bind(element, binding) {
+            element.value = binding.value;
+        },
+        //元素被插入页面时
+        inserted(element, binding) {
+            element.focus();
+        },
+        //模板重新解析时
+        update(element, binding) {
+            element.value = binding.value;
+            element.focus();
+        }
+    })
     vm = new Vue({
         el: '#root',
         data() {
@@ -40,21 +55,21 @@
                 // console.log(element)
                 // console.log(binding)
             },
-            'fbind-number': {
-                //绑定时
-                bind(element, binding) {
-                    element.value = binding.value;
-                },
-                //元素被插入页面时
-                inserted(element, binding) {
-                    element.focus();
-                },
-                //模板重新解析时
-                update(element, binding) {
-                    element.value = binding.value;
-                    element.focus();
-                }
-            }
+            // 'fbind-number': {
+            //     //绑定时
+            //     bind(element, binding) {
+            //         element.value = binding.value;
+            //     },
+            //     //元素被插入页面时
+            //     inserted(element, binding) {
+            //         element.focus();
+            //     },
+            //     //模板重新解析时
+            //     update(element, binding) {
+            //         element.value = binding.value;
+            //         element.focus();
+            //     }
+            // }
             // fbind(element, binding) {
             //     console.log(element);
             //     element.value = binding.value;
