--- a/vue_basic/19.lifecycle/1.intro.html
+++ b/vue_basic/19.lifecycle/1.intro.html
@@ -24,6 +24,14 @@
                 opacity_val: 0.5,
             }
         },
+        methods: {
+            smooth() {
+                setInterval(() => {
+                    this.opacity_val -= 0.01
+                    if (this.opacity_val <= 0) this.opacity_val = 1
+                }, 16)
+            }
+        },
 
     })
 </script>
