--- a/vue_basic/19.lifecycle/2.analyse.html
+++ b/vue_basic/19.lifecycle/2.analyse.html
@@ -30,11 +30,17 @@
             }
         },
         mounted() {
-            console.log('mounted')
+            console.log('mounted');
+            debugger;
         },
         beforeCreate() {
             console.log(this);
             console.log('beforeCreate');
+            debugger;
+        },
+        created() {
+            console.log(this);
+            console.log('created');
             debugger;
         },
 
