--- a/vue_basic/19.lifecycle/2.analyse.html
+++ b/vue_basic/19.lifecycle/2.analyse.html
@@ -18,7 +18,7 @@
 <script>
     Vue.config.productionTip = false;
     const vm = new Vue({
-        el: '#root',
+        // el: '#root',
         data() {
             return {
                 n: 1,
@@ -30,17 +30,17 @@
             }
         },
         beforeCreate() {
-            console.log(this);
+            // console.log(this);
             console.log('beforeCreate');
             // debugger;
         },
         created() {
-            console.log(this);
+            // console.log(this);
             console.log('created');
             // debugger;
         },
         beforeMount() {
-            console.log(this);
+            // console.log(this);
             console.log('beforeMount');
             // debugger;
         },
