--- a/vue_basic/19.lifecycle/2.analyse.html
+++ b/vue_basic/19.lifecycle/2.analyse.html
@@ -18,7 +18,7 @@
 <script>
     Vue.config.productionTip = false;
     const vm = new Vue({
-        // el: '#root',
+        el: '#root',
         data() {
             return {
                 n: 1,
@@ -46,7 +46,7 @@
         },
         mounted() {
             console.log('mounted');
-            debugger;
+            // debugger;
         },
 
 
