--- a/vue_basic/19.lifecycle/2.analyse.html
+++ b/vue_basic/19.lifecycle/2.analyse.html
@@ -19,6 +19,7 @@
     Vue.config.productionTip = false;
     const vm = new Vue({
         el: '#root',
+        // template:,
         data() {
             return {
                 n: 1,
