--- a/vue_basic/19.lifecycle/2.analyse.html
+++ b/vue_basic/19.lifecycle/2.analyse.html
@@ -52,6 +52,10 @@
         },
         beforeUpdate() {
             console.log('beforeUpdate');
+            // debugger
+        },
+        updated() {
+            console.log('updated');
         },
 
     })
