--- a/vue_basic/19.lifecycle/2.analyse.html
+++ b/vue_basic/19.lifecycle/2.analyse.html
@@ -52,7 +52,7 @@
         },
         beforeUpdate() {
             console.log('beforeUpdate');
-            // debugger
+            debugger
         },
         updated() {
             console.log('updated');
