--- a/vue_basic/19.lifecycle/2.analyse.html
+++ b/vue_basic/19.lifecycle/2.analyse.html
@@ -61,6 +61,10 @@
         beforeDestroy() {
             console.log('beforeDestroy');
         },
+        destroyed() {
+            console.log('destroyed');
+            console.log(this)
+        },
     })
 </script>
 
