--- a/vue_basic/19.lifecycle/3.conclude_lifecycle.html
+++ b/vue_basic/19.lifecycle/3.conclude_lifecycle.html
@@ -39,7 +39,7 @@
                 this.$destroy();
             },
             stop() {
-                this.$destroy();
+                clearInterval()
             }
         },
         beforeCreate() {
