--- a/vue_basic/19.lifecycle/3.conclude_lifecycle.html
+++ b/vue_basic/19.lifecycle/3.conclude_lifecycle.html
@@ -74,11 +74,14 @@
         //     console.log('updated');
         // },
         beforeDestroy() {
+            clearInterval(this.timer);
             console.log('beforeDestroy');
+
         },
         destroyed() {
+            // debugger;
             console.log('destroyed');
-            // console.log(this)
+            // console.log(this.n)
         },
     })
 </script>
