--- a/vue_basic/19.lifecycle/3.conclude_lifecycle.html
+++ b/vue_basic/19.lifecycle/3.conclude_lifecycle.html
@@ -28,7 +28,7 @@
             return {
                 n: 1,
                 opacity: 1,
-                timer: 0,
+                // timer: 0,
             }
         },
         methods: {
