--- a/vue_basic/18_notsingle/1.basicuse.html
+++ b/vue_basic/18_notsingle/1.basicuse.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="root">
-        <h2></h2>
+        <h2>{{school.name}}</h2>
     </div>
 </body>
 <script>
@@ -35,7 +35,8 @@
     const vm = new Vue({
         el: '#root',
         components: {
-
+            'school': school,
+            'student': student,
         }
     })
 </script>
