--- a/vue_basic/18_notsingle/1.basicuse.html
+++ b/vue_basic/18_notsingle/1.basicuse.html
@@ -11,13 +11,15 @@
 
 <body>
     <div id="root">
-        <student></student>
-        <hr />
         <school></school>
+        <hr />
+        <student1></student1>
+        <hr />
+        <student2></student2>
     </div>
 </body>
 <script>
-    const student = Vue.extend({
+    const student1 = Vue.extend({
         template: `
         <div>
             <h2>{{name}}</h2>
@@ -52,11 +54,28 @@
         },
     })
     Vue.config.productionTip = false
+
+    const student2 = Vue.extend({
+        template: `
+        <div>
+            <h2>{{name}}</h2>
+            <h2>{{age}}</h2>
+        </div>
+        `,
+        data() {
+            return {
+                name: 'lily',
+                age: 21,
+            }
+        }
+    })
+    Vue.component('student2', student2)
+
     const vm = new Vue({
         el: '#root',
         components: {
             'school': school,
-            'student': student,
+            'student1': student1,
         }
     })
 </script>
