--- a/vue_basic/18_notsingle/4.VueComponent.html
+++ b/vue_basic/18_notsingle/4.VueComponent.html
@@ -73,7 +73,7 @@
     })
     Vue.config.productionTip = false
 
-
+    console.log('school', school)
     // Vue.component('student2', student2)
     const app = {
         template: `
