--- a/vue_basic/18_notsingle/4.VueComponent.html
+++ b/vue_basic/18_notsingle/4.VueComponent.html
@@ -68,6 +68,7 @@
         methods: {
             pop() {
                 alert(this.name)
+                console.log(this)
             }
         },
     })
