--- a/vue_test_demo/08_src_storage/sessionStorage.html
+++ b/vue_test_demo/08_src_storage/sessionStorage.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h2>localStorage</h2>
+<h2>sessionStorage</h2>
 <button onclick="saveData()">save</button>
 <button onclick="readData()">read</button>
 <button onclick="deleteData()">delete</button>
