--- a/vue3_basic/05_Vue3_proxy/test.html
+++ b/vue3_basic/05_Vue3_proxy/test.html
@@ -20,7 +20,7 @@
         },
         deleteProperty(target, p) {
             console.log(`delete ${target},${p}`)
-            delete target[p]
+            return delete target[p]
         }
     })
 </script>
